fix the background color behind the Read More text in the articles on the front page. it now transitions to grey, like the rest of the article element does when hovering over it.

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -39,9 +39,9 @@ q:after{content:' „'; font-size:26px; line-height:0;}
 
 div.wrapper{display:block; width:1170px; margin:0 auto; padding:0; text-align:left;}
 
-.row1, .row1 a{color:#979797; background-color:#FFFFFF;}
+.row1, .row1 a{color:#979797;}
 .row2{color:#979797; background-color:#FFFFFF;}
-.row2 a{color:#FF9900; background-color:#FFFFFF;}
+.row2 a{color:#FF9900;}
 .row3{border-top:1px solid #DEDEDE;}
 .row3, .row3 a{color:#979797; background-color:#FFFFFF;}
 
